--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,8 @@
     box-sizing: border-box;
 }
 
+
+
 html {
     scroll-behavior: smooth;
 }
@@ -520,8 +522,10 @@ nav {
 
 .gallery-image img {
     position: absolute;
-    height: 70%;
-    width: initial;
+    max-width: 100%;
+    height: 100%;
+    display: block;
+    object-fit: cover;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -956,9 +960,7 @@ a:visited {
         margin-top: 1rem;
     }
 
-    .hamburger-menu {
-        display: flex;
-    }
+
 
     .showcase-content {
         margin-top: 1rem;
@@ -979,27 +981,20 @@ a:visited {
     }
 
     .links {
-        position: fixed;
-        width: 100%;
-        height: 100vh;
-        top: 0;
-        right: 0;
-        background-color: #252525;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        text-align: center;
-        transform: translateX(100%);
+        color: var(--dark-one);
+        height: 0px;
         transition: 0.5s;
+    }
+
+    #nav-icon {
+        font-size: 2rem;
+        margin-top: 1rem;
     }
 
     .links ul {
         flex-direction: column;
     }
 
-    .links a {
-        color: var(--light-one);
-    }
 
     .links a.active {
         margin-left: 0;
@@ -1134,6 +1129,12 @@ a:visited {
 
 }
 
+@media only screen and (min-width: 850px) {
+    #nav-icon {
+        display: none;
+    }
+}
+
 @media (max-width: 600px) {
     .grid-item {
         width: 100%;
@@ -1179,6 +1180,12 @@ a:visited {
 
 
 
+}
+
+@media (max-width: 400px) {
+    .contact-text {
+        font-size: 1.8vh;
+    }
 }
 
 /* End Responsive */
